test/fail/inheritance/inherit_builtin.lly
#[
SyntaxError: 'integer' cannot be inherited from.
Where: File "inherit_builtin.lly" at line 6
]#

class abc() < integer {  }
